# low-bit-attention-fake-quant

./: .gitignore  README.md  pyproject.toml
agent_space/blasst_skip/: analysis_final.md  analysis_preliminary.md  degradation_tables.md  layout_ranking.json  manifest.json  records.csv  results.json
agent_space/blasst_skip_reordered/: manifest.json  records.csv  results.json
agent_space/skip_approx/: multibin_uta_merged.json  multibin_uta_summary.md
bench/: RESULTS_wan21.md  count_rowmax_updates_triton.py  diagnose_wan_rowmax.py  eval_blasst_quant.py  eval_blasst_skip.py  eval_hadamard_qk.py  eval_video_dirs.py  eval_wan21.py  gen_wan_e2e_pquant.py  gen_wan_videos.py  make_analysis_tables.py  rank_reorder_layouts.py  results_blasst_fill_real_more.json  results_blasst_fill_real_one.json  results_blasst_quant_full.json  results_hadamard_qk.json  results_kmeans_k_sweep.json  results_v_quant_sweep.json  results_wan21.json  results_wan21_v2.json  results_wan21_v3.json  results_wan21_v4.json  run_wan_e2e_5noise.py  skip_approx_probe.py  sweep_kmeans_k.py  sweep_v_quant.py  verify_rowmax_online.py  wan_attention_hook.py
bench/wan_videos/: metrics.json
docs/: fa4_implementation_roadmap.md  plan.md  quant_precision_test_plan.md
src/low_bit_fake_quant/: __init__.py  attention.py  attention_triton.py  blasst_skip.py  config.py  hadamard.py  kmeans.py  p_requant.py  pipeline.py  preprocess.py  quant_triton.py  skip_metrics.py
tests/: test_blasst_skip.py  test_fake_quant_attention.py  test_imports.py  test_qk_hadamard.py  test_triton_attn.py  test_v_kmeans.py  test_v_quant_variants.py  test_v_smoothing.py
